--- a/trunk/doc/man/man8/slurmctld.8
+++ b/trunk/doc/man/man8/slurmctld.8
@@ -1,4 +1,4 @@
-.TH SLURMCTLD "8" "March 2004" "slurmctld 0.3" "Slurm components"
+.TH SLURMCTLD "8" "March 2004" "slurmctld 0.5" "Slurm components"
 .SH "NAME"
 slurmctld \- The central management daemon of Slurm.
 .SH "SYNOPSIS"
@@ -33,14 +33,23 @@ Write log messages to the specified file.
 \fB\-v\fR
 Verbose operation. Multiple \fB-\v\fR's increase verbosity.
 
+.SH "ENVIRONMENT VARIABLES"
+The following environment variables can be used to override settings
+compiled into slurmctld.
+.TP 20
+\fBSLURM_CONF\fR
+The location of the SLURM configuration file. This is overridden by
+explicitly naming a configuration file on the command line.
+
 .SH "NOTES"
-It may be useful to experiment with different \fBslurmctld\fR specific 
-configuration parameters using a distinct configuration file (e.g. timeouts). 
-However, this special configuration file will not be used by \fBslurmd\fR 
-daemon or the Slurm programs. If you desire changing communication ports, 
-the location of the temporary file system, or other parameters used 
-by other Slurm components, change the common configuration file, 
-\fBslurm.conf\fR.
+It may be useful to experiment with different \fBslurmctld\fR specific
+configuration parameters using a distinct configuration file
+(e.g. timeouts).  However, this special configuration file will not be
+used by the \fBslurmd\fR daemon or the Slurm programs, unless you
+specifically tell each of them to use it. If you desire changing
+communication ports, the location of the temporary file system, or
+other parameters used by other Slurm components, change the common
+configuration file, \fBslurm.conf\fR.
 
 .SH "COPYING"
 Copyright (C) 2002 The Regents of the University of California.
