If slurmd's node name is mapped to NULL (due to bad configuration)     terminate slurmd with a fatal error and don't crash slurmctld.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -5,6 +5,8 @@ documents those changes that are of interest to users and admins.
 =============================
  -- Fix bug in srun to clean-up upon failure of an allocated node
     (srun -A would generate a segmentation fault, Chris Holmes, HP).
+ -- If slurmd's node name is mapped to NULL (due to bad configuration)
+    terminate slurmd with a fatal error and don't crash slurmctld.
 
 * Changes in SLURM 0.5.0-pre1
 =============================
