--- a/branches/slurm-0-4-branch/NEWS
+++ b/branches/slurm-0-4-branch/NEWS
@@ -1,6 +1,12 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.22
+=========================
+ -- Modified bluegene plugin to not do anything if the bluegene.conf file 
+    is altered.
+ -- added checking for lists before trying to create iterator on the list.
+
 * Changes in SLURM 0.4.21
 =========================
  -- Fix in race condition with time in Status Thread of BGL
