Correct typo "Indicies" to "Indices". Bryan O'Sullivan <bos@pathscale.com>

--- a/trunk/doc/man/man1/scontrol.1
+++ b/trunk/doc/man/man1/scontrol.1
@@ -1,4 +1,4 @@
-.TH SCONTROL "1" "March 2005" "scontrol 0.5" "Slurm components"
+.TH SCONTROL "1" "April 2005" "scontrol 0.5" "Slurm components"
 
 .SH "NAME"
 scontrol \- Used view and modify Slurm configuration and state.
@@ -335,7 +335,7 @@ PartitionName=class TotalNodes=10 TotalCPUs=20 RootOnly=NO
 .br
    MinNodes=1 MaxNodes=2 AllowGroups=students
 .br
-   Nodes=lx[0031-0040] NodeIndicies=31,40,-1
+   Nodes=lx[0031-0040] NodeIndices=31,40,-1
 .br 
 scontrol: update PartitionName=class MaxTime=99 MaxNodes=4
 .br 
