Note updates for v0.3.13.

--- a/branches/slurm-0-3-branch/NEWS
+++ b/branches/slurm-0-3-branch/NEWS
@@ -1,6 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.3.13
+=========================
+ -- "sinfo -i" no longer aborts when nodes have associated features
+
 * Changes in SLURM 0.3.12
 =========================
  -- Always report job scheduling details (so prolog/epilog can find 
