new tag, minor bug fixes.

--- a/branches/slurm-0-4-branch/NEWS
+++ b/branches/slurm-0-4-branch/NEWS
@@ -7,6 +7,9 @@ documents those changes that are of interest to users and admins.
     startup, not on reconfig. Fixes race condition.
  -- Modified bluegene plugin to work with 141 driver. Enabling it to 
     only have to reboot when switching from coproc -> virtual and back.
+ -- added support for a full system partition to make sure every other 
+    partition is free and vice-verse.
+ -- smap resizing issue fixed.
 
 * Changes in SLURM 0.4.22
 =========================
