--- a/branches/slurm-0-4-branch/NEWS
+++ b/branches/slurm-0-4-branch/NEWS
@@ -10,6 +10,8 @@ documents those changes that are of interest to users and admins.
  -- added support for a full system partition to make sure every other 
     partition is free and vice-verse.
  -- smap resizing issue fixed.
+ -- change prolog not to add time when a partition is in deallocating 
+    state.
 
 * Changes in SLURM 0.4.22
 =========================
