--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,12 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.5.0-pre4
+=============================
+ -- Fix bug in slurmd that could double KillWait time on job timeout.
+ -- Fix bug in srun's error code reporting to slurmctld, could DOWN 
+    a node if job run as root has non-zero error code.
+
 * Changes in SLURM 0.5.0-pre3
 =============================
  -- Merge of SLURM v0.4-branch into v0.5/HEAD.
