--- a/branches/slurm-0-4-branch/NEWS
+++ b/branches/slurm-0-4-branch/NEWS
@@ -1,6 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.25
+=========================
+ -- Added another directory to search for DB2 on BGL system.
+
 * Changes in SLURM 0.4.24
 =========================
  -- DRAIN nodes with switches on base partitions are in ERROR, MISSING, 
