--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -11,6 +11,8 @@ documents those changes that are of interest to users and admins.
     calling interconnect_postfini() to insure no processes escape from 
     job and prevent switch windows from being released.
  -- Added mail.html web page telling how to get on slurm mailing lists.
+ -- Added another directory to search for DB2 files on BGL system.
+ -- Added overview man page slurm.1.
 
 * Changes in SLURM 0.5.0-pre3
 =============================
