--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,7 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.5.0-pre5
 =============================
+ -- Modify slurmctld node hashing function to reduce collisions.
 
 * Changes in SLURM 0.5.0-pre4
 =============================
