Added ibm.html and revise bluegene.html doc

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -5,6 +5,7 @@ documents those changes that are of interest to users and admins.
 =============================
  -- Load bluegene.conf and federation.conf based upon SLURM_CONF env 
     var (if set).
+ -- Add doc/html/ibm.html document. Update bluegene.html.
 
 * Changes in SLURM 0.5.0-pre5
 =============================
