--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -5,10 +5,14 @@ documents those changes that are of interest to users and admins.
 =============================
  -- Load bluegene.conf and federation.conf based upon SLURM_CONF env 
     var (if set).
+ -- Fix slurmd shutdown signal synchronization bug (not consistently 
+    terminating).
  -- Add doc/html/ibm.html document. Update bluegene.html.
  -- Add sfree to bluegene plugin. 
  -- Remove geometry[SYSTEM_DIMENSIONS] from opaque node_select data 
     type if SYSTEM_DIMENSIONS==0 (not ASCI-C compliant).
+ -- Modify spec file for optional inclusion of select_bluegene and 
+    sched_wiki plugin libraries.
 
 * Changes in SLURM 0.5.0-pre5
 =============================
