--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -15,9 +15,12 @@ documents those changes that are of interest to users and admins.
     Bridge API calls.
  -- Modify spec file for optional inclusion of select_bluegene and 
     sched_wiki plugin libraries.
+ -- Initialize job->network in data structure, could cause job 
+    submit/update to fail depending upon what is left on stack.
 
 * Changes in SLURM 0.5.0-pre5
 =============================
+ -- Expand buffer to hold node_select info in job termination log.
  -- Modify slurmctld node hashing function to reduce collisions.
  -- Treat bglblock vanishing as fatal error for job, prolog and epilog 
     exit immediately.
