Extensive mods checked it for HP work, see NEWS for details.

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,17 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.5.0-pre7
+=============================
+ -- Preserve next_job_id across restarts.
+ -- Add support for really long job names (256 bytes).
+ -- Add configuration parameter SchedulerRootFilter to control what 
+    entity manages prioritization of jobs in RootOnly partition 
+    (internal scheduler plugin or external entity).
+ -- Added support for job accounting.
+ -- Added support for consumable resource based node scheduling.
+ -- Permit batch job to be launched to re-existing allocation.
+
 * Changes in SLURM 0.5.0-pre6
 =============================
  -- Load bluegene.conf and federation.conf based upon SLURM_CONF env 
