--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,9 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.5.0-pre8
+=============================
+
 * Changes in SLURM 0.5.0-pre7
 =============================
  -- Preserve next_job_id across restarts.
