--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,7 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.5.0-pre8
 =============================
+ -- BlueGene srun --geometry was not getting propogated properly.
 
 * Changes in SLURM 0.5.0-pre7
 =============================
