--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -4,6 +4,7 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 0.5.0-pre8
 =============================
  -- BlueGene srun --geometry was not getting propogated properly.
+ -- Fix race condition with multiple simultaneous epilogs.
 
 * Changes in SLURM 0.5.0-pre7
 =============================
