--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -12,6 +12,7 @@ documents those changes that are of interest to users and admins.
     by default, display ncpus instead of nprocs
  -- Parallelization of queing jobs up to 32 at once.  Variable 
     MAX_AGENT_COUNT used in bgl_job_run.c to specify.
+ -- bgl_job_run.c fixed threading issue with uid_to_string use.
 
 * Changes in SLURM 0.5.0-pre7
 =============================
